--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="91dp"
+        android:onClick="Sign"
         android:text="@string/sign"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/button_authorize"
