--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button_authorize"
-        android:layout_width="129dp"
-        android:layout_height="57dp"
+        android:layout_width="145dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/authorize_button"
+        android:shadowColor="#000000"
+        android:shadowDx="10"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
         android:text="@string/authorize"
         android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:textSize="16sp"
+        android:drawableLeft="@drawable/authorize_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.908" />
@@ -31,6 +39,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:drawableLeft="@drawable/date"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
@@ -55,156 +64,134 @@
 
     <Button
         android:id="@+id/button_loadInfo"
-        android:layout_width="176dp"
-        android:layout_height="72dp"
+        android:layout_width="155dp"
+        android:layout_height="53dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="436dp"
-        android:onClick="getCredentialIds"
+        android:layout_marginBottom="428dp"
+        android:background="@drawable/authorize_button"
+        android:onClick="GetCertificatesList"
+        android:shadowColor="#000000"
+        android:shadowDx="10"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
         android:text="@string/get_certificates"
+        android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/button_authorize"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.846" />
 
     <Button
         android:id="@+id/button_view"
-        android:layout_width="112dp"
-        android:layout_height="37dp"
+        android:layout_width="115dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="88dp"
-        android:text="@string/view_pdf"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="132dp"
+        android:background="@drawable/authorize_button"
         android:onClick="viewPdf"
+        android:shadowColor="#000000"
+        android:shadowDx="10"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
+        android:text="@string/view_pdf"
+        android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/getSadBtn"
-        app:layout_constraintVertical_bias="0.761" />
-
-    <Button
-        android:id="@+id/certificatesBtn"
-        android:layout_width="176dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="getInfo"
-        android:text="@string/load_info"
-        android:textAlignment="center"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_loadInfo"
-        app:layout_constraintVertical_bias="0.214" />
-
-    <Button
-        android:id="@+id/selectCertBtn"
-        android:layout_width="174dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="setCertInfo"
-        android:text="@string/set_certificates_list"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
-        app:layout_constraintEnd_toStartOf="@+id/certList"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/certificatesBtn"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/signButton"
+        app:layout_constraintTop_toBottomOf="@+id/signPasswd"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Spinner
         android:id="@+id/certList"
-        android:layout_width="174dp"
-        android:layout_height="58dp"
+        android:layout_width="177dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:textAlignment="center"
         android:visibility="invisible"
+        android:hapticFeedbackEnabled="true"
+        android:tooltipText="@string/select_certificate"
+        android:background="@drawable/gradient_color"
+        style="@android:style/Widget.Spinner"
         app:layout_constraintBottom_toTopOf="@+id/button_authorize"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/certificatesBtn"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/sendOtpBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="sendOTP"
-        android:text="@string/send_otp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
+        app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectCertBtn"
-        app:layout_constraintVertical_bias="0.264" />
-
-    <Button
-        android:id="@+id/getSadBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/get_sad"
-        android:onClick="GetSad"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/certList"
-        app:layout_constraintVertical_bias="0.259" />
+        app:layout_constraintTop_toBottomOf="@+id/button_loadInfo"
+        app:layout_constraintVertical_bias="0.184" />
 
     <EditText
         android:id="@+id/enterOtp"
         android:layout_width="124dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="184dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter TAN"
+        android:textColorHint="@color/colorGray"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="14sp"
+        android:textColor="#EDEDED"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/certList"
+        app:layout_constraintVertical_bias="0.15" />
 
     <EditText
         android:id="@+id/signPasswd"
         android:layout_width="124dp"
         android:layout_height="51dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/sign_password"
+        android:textColorHint="@color/colorGray"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textSize="14sp"
+        android:textColor="#EDEDED"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterOtp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.864"
+        app:layout_constraintStart_toEndOf="@+id/enterOtp"
+        app:layout_constraintTop_toBottomOf="@+id/certList" />
 
     <Button
         android:id="@+id/signButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="80dp"
+        android:background="@drawable/authorize_button"
         android:onClick="SignDocument"
+        android:shadowColor="#705C5F"
+        android:shadowDx="10"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
         android:text="@string/sign"
+        android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:textSize="15sp"
         android:visibility="invisible"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="527dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button_authorize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
