--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/authorize_button"
+        android:drawableEnd="@drawable/authorize"
         android:shadowColor="#000000"
         android:shadowDx="10"
         android:shadowDy="-10"
@@ -23,23 +24,23 @@
         android:text="@string/authorize"
         android:textAlignment="center"
         android:textColor="#EDEDED"
-        android:textSize="16sp"
-        android:drawableLeft="@drawable/authorize_icon"
+        android:textSize="15.5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908" />
+        app:layout_constraintVertical_bias="0.835" />
 
     <TextView
         android:id="@+id/text_datetime"
         android:layout_width="311dp"
-        android:layout_height="39dp"
+        android:layout_height="67dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
+        android:drawableBottom="@drawable/calendar"
         android:text="TextView"
-        android:drawableLeft="@drawable/date"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
@@ -71,6 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="428dp"
         android:background="@drawable/authorize_button"
+        android:drawableEnd="@drawable/get_certif"
         android:onClick="GetCertificatesList"
         android:shadowColor="#000000"
         android:shadowDx="10"
@@ -83,9 +85,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/button_authorize"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_view"
@@ -98,6 +101,7 @@
         android:background="@drawable/authorize_button"
         android:onClick="viewPdf"
         android:shadowColor="#000000"
+        android:drawableEnd="@drawable/open_pdf"
         android:shadowDx="10"
         android:shadowDy="-10"
         android:shadowRadius="5"
@@ -182,6 +186,7 @@
         android:background="@drawable/authorize_button"
         android:onClick="SignDocument"
         android:shadowColor="#705C5F"
+        android:drawableEnd="@drawable/sign"
         android:shadowDx="10"
         android:shadowDy="-10"
         android:shadowRadius="5"
