--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:layout_marginBottom="428dp"
         android:background="@drawable/authorize_button"
         android:drawableEnd="@drawable/get_certif"
-        android:onClick="GetCertificatesList"
+
         android:shadowColor="#000000"
         android:shadowDx="10"
         android:shadowDy="-10"
@@ -89,6 +89,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/signButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_loadInfo"
+        app:layout_constraintVertical_bias="0.704" />
 
     <Button
         android:id="@+id/button_view"
