--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorHint">#FFA79EA0</color>
     <color name="colorBackground">#FFBFE0C7</color>
     <color name="colorGray">#FFADA7A8</color>
+    <color name="colorWhite">#EDEDED</color>
 </resources>
