--- a/app/src/main/res/layout/spinner_drop_down_items.xml
+++ b/app/src/main/res/layout/spinner_drop_down_items.xml
@@ -8,5 +8,5 @@
     android:ellipsize="marquee"
     android:drawableStart="@drawable/certif"
     android:drawableEnd="@drawable/selected_crt"
-    android:textSize="18dp"
+    android:textSize="18sp"
     android:textColor="#000000"/>
