--- a/app/src/main/res/layout/viewpdf.xml
+++ b/app/src/main/res/layout/viewpdf.xml
@@ -13,6 +13,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></com.github.barteksc.pdfviewer.PDFView>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
